--- a/app/assets/stylesheets/components/darktheme/_contact_darktheme.scss
+++ b/app/assets/stylesheets/components/darktheme/_contact_darktheme.scss
@@ -121,7 +121,7 @@
         width: 100%;
         background: #171717;
         position: absolute;
-        z-index: 4;
+        z-index: 3;
         bottom: -7px;
       }
       .white-bar {
@@ -129,7 +129,7 @@
         width: 100%;
         background: white;
         position: absolute;
-        z-index: 4;
+        z-index: 3;
         bottom: -7px;
       }
     }
