--- a/app/assets/stylesheets/components/lighttheme/_filter_lighttheme.scss
+++ b/app/assets/stylesheets/components/lighttheme/_filter_lighttheme.scss
@@ -5,7 +5,7 @@
   height: 100vh;
   left: 0px;
   width: 100%;
-  z-index: 4;
+  z-index: 5;
   transition: top 0.6s ease;
   background: $card-background;
   padding: $padding-small;
